@@ -4,4 +4,4 @@ warptorio-warp-trains=Warp Trains Between Floors
 
 [tips-and-tricks-item-description]
 warptorio=Warptorio (Space Age).
-warptorio-warp-trains=Trains can be warped between the [font=default-bold]ground[/font] and the [font=default-bold]factory floor[/font] using special train stations.\n\nTo warp a train, it must be [color=yellow]fully stopped[/color] at a station named:\n • [color=orange]WarpGround[/color] (If you want to go to ground floor from the factory)\n • [color=orange]WarpFactory[/color] (If you want to go to factory floor from the ground floor)\n\n[color=red][font=default-bold]Important:[/font][/color]\nBoth stations must have the [color=red]same orientation[/color] (north, south, east, or west).\n\nIf the station names match but the orientations do not, the train will [font=default-bold]not warp[/font].\nTrain will also [font=default-bold]not warp[/font] if it is in manual more or when there is someone inside.\n\n[color=green]Tip:[/color] Copy or blueprint the station to ensure the orientation matches on both floors.
+warptorio-warp-trains=Trains can be warped between the [font=default-bold]ground[/font] and the [font=default-bold]factory floor[/font] using special train stations.\n\nTo warp a train, it must be [color=yellow]fully stopped[/color] at a station named:\n • [color=orange]WarpGround[/color] (If you want to go to ground floor from the factory)\n • [color=orange]WarpFactory[/color] (If you want to go to factory floor from the ground floor)\n\n[color=red][font=default-bold]Important:[/font][/color]\nBoth stations must have the [color=red]same orientation[/color] (north, south, east, or west).\n\nIf the station names match but the orientations do not, the train will [font=default-bold]not warp[/font].\nTrain will also [font=default-bold]not warp[/font] if it is in manual more or when there is someone inside.\n\n[color=green]Tip:[/color] Copy or blueprint the station to ensure the orientation matches on both floors.If you want to have multiple train stops per cardinal direction disable all stations except one to ensure that train will go to that station.
